--- a/lead.html
+++ b/lead.html
@@ -2350,10 +2350,137 @@ label {
             Estimate</button>
     </div>
 
+    <div class="popupe">
+        <button id="close">&times;</button>
+        <h2>Get <b style="color: #a75395;"> %25 </b> Off Now!</h2>
+        <hr style="color: #a75395;">
+        <p style="text-align: center;">
+            Enjoy our Winter Discount and get a free estimate
+        </p>
+       <div class="selections">   <a id="closre" href="#" style="background-color: white; color: black; border: black 1px solid;">NO</a>  <a href="#" id="yessre">YES</a>  </div>
+
+    </div>
+    <!--Script-->
+    <script type="text/javascript">
+        let amew =  setTimeout(
+        function open(event){
+            document.querySelector(".popupe").style.display = "block";
+            document.getElementById("popupe").focus();
+
+        },
+        3000
+    );
+window.addEventListener("load", function(){
+    console.log("loaded")
+    setTimeout(
+        function open(event){
+            document.querySelector(".popupe").style.display = "block";
+        },
+        3000
+    )
+});
 
 
-    <!-- <iframe owner="archetype" title="archetype" style="display: none; visibility: hidden;"
-        src="./files/saved_resource(3).html"></iframe> -->
+document.querySelector("#yessre").addEventListener("click", function(){
+    document.querySelector(".button--orange").click();
+    document.querySelector(".popupe").style.display = "none";
+
+});
+document.querySelector("#close").addEventListener("click", function(){
+    document.querySelector(".popupe").style.display = "none";
+});
+document.querySelector("#closre").addEventListener("click", function(){
+    document.querySelector(".popupe").style.display = "none";
+});
+    </script>
+
+
+
+    <style media="screen">
+
+
+.popupe{
+    z-index: 99999;
+    border: #a75395 1px solid;
+    background-color: #ffffff;
+    width: 80%;
+    padding: 30px 40px;
+    position: fixed;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 8px;
+    font-family: "Poppins",sans-serif;
+    display: none;
+    text-align: center;
+}
+.popupe button{
+    display: block;
+    margin:  0 0 20px auto;
+    background-color: transparent;
+    font-size: 30px;
+    color: #ffffff;
+		background: #03549a;
+		border-radius: 100%;
+		width: 40px;
+		height: 40px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.popupe h2{
+    font-size: 8vw;
+	margin-top: -20px;
+}
+.popupe p{
+    font-size: 2vw;
+    text-align: justify;
+    margin: 20px 0;
+    line-height: 25px;
+}
+.selections{
+    display: flex;
+    width: 500px;
+    position: relative;
+    margin: 10px auto;
+    text-align: center;
+    padding: 8px 0;
+}
+.selections a{
+    width: 40% !important;
+    padding: 18px ;
+    margin: 30px auto;
+    background-color: #0f72e5;
+	border-radius: 20px;
+    color: #ffffff;
+    text-decoration: none;
+
+}
+
+@media only screen and (max-width: 600px) {
+
+    .popupe h2{
+    font-size: 10vw;}
+    .popupe p{
+    font-size: 4vw;}
+
+}
+.popupe button{
+    display: block;
+    margin:  0 0 40px auto;
+    background-color: transparent;
+    font-size: 15px;
+    color: #ffffff;
+		background: #03549a;
+		border-radius: 100%;
+		width: 20px;
+		height: 20px;}
+        .selections{
+    width: auto;}
+
+    </style>
+
+
 </body>
 
 </html>
