--- a/lead.html
+++ b/lead.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700&subset=latin-ext" rel="stylesheet">
@@ -14,7 +16,7 @@
 
 
     <title>CEN STONE</title>
-    <link rel="stylesheet" href="./files/e8eb67eb3bd67b0975d3e59452d11594.css?v=14" media="all" data-minify="1">
+    <link rel="stylesheet" href="./files/e8eb67eb3bd67b0975d3e59452d11594.css?v=15" media="all" data-minify="1">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:title" content="countertop">
@@ -136,9 +138,29 @@ margin: 0px;        }
     /></noscript>
     <!-- End Meta Pixel Code -->
 
+
+
+
+
 </head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WYW5RTJXJ7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WYW5RTJXJ7');
+    </script>
+
+
 <body class="home page-template page-template-home__page page-template-home__page-php page page-id-3905">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NQSN2FN"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <div class="preheader">
         <div class="container header__container">
             <div class="preheader__row">
@@ -520,7 +542,7 @@ function myFunction() {
                                     alt=""
                                    >
                             </div>
-                            <div class="score__value"><span id="count">98</span>%</div>
+                            <div class="score__vale" style=""><span id="">99</span>%</div>
                         </div>
                     </div>
                     <div class="trust__list col-md-4">
