--- a/lead.html
+++ b/lead.html
@@ -629,7 +629,7 @@ function myFunction() {
             </div>
         </div>
             <div class="subtext subtext__left subtext--lined" style="margin-top: 10px;text-align: center;">Here’s what to expect when you
-                hire us as your place contractor.</div>
+                hire us as your countertop contractor.</div>
             </div>
         <div class="reviews__slider owl-carousel owl-loaded" id="reviewsSlider">
             <div class="owl-stage-outer">
@@ -768,8 +768,8 @@ function myFunction() {
         <div class="container">
             <h2 class="title">Get Factory Direct<br> Prices<span style="text-transform: lowercase;"> At</span><br><span style="color: #F09E21;"> CENSTONE</span>
                 </h2>
-            <div class="subtext subtext--lined">We aim to deliver an all-inclusive renovation service and strive to ensure that <br>
-                each renovation project stays on time and within budget.
+            <div class="subtext subtext--lined">We aim to deliver an all-inclusive countertop service and strive to ensure that <br>
+                each countertop project stays on time and within budget.
             </div>
             <ul class="info__list row">
                 <li class="col-md-4">
@@ -802,7 +802,7 @@ function myFunction() {
                         </div>
                         <div class="block__title">Complete Package</div>
                         <div class="block__text">
-                            <p>We provide a complete package with everything needed to build your renovation: design,
+                            <p>We provide a complete package with everything needed to build your countertop: design,
                                 finish materials, and scheduled deliveries.</p>
                         </div>
                     </div>
@@ -821,7 +821,7 @@ function myFunction() {
                         </div>
                         <div class="block__title">Quality Materials</div>
                         <div class="block__text">
-                            <p>We will use top-quality materials from different vendors. For all your needs
+                            <p>We will use top-quality materials with premium workmanship. For all your needs
 				                we’ve got you covered.</p>
                         </div>
                     </div>
@@ -837,10 +837,10 @@ function myFunction() {
                                     fill="#33475B"></path>
                             </svg>
                         </div>
-                        <div class="block__title">In-House Contractors</div>
+                        <div class="block__title">Premium Installation</div>
                         <div class="block__text">
-                            <p>With plans and fixtures all pre-prepared, you’ll work with professional builders and have
-                                your renovation completed stress-free.</p>
+                            <p>With plans and fixtures all pre-prepared, you’ll work with professional countertop installers and have
+                                your countertop building process completed stress-free.</p>
                         </div>
                     </div>
                 </li>
@@ -857,7 +857,7 @@ function myFunction() {
                         </div>
                         <div class="block__title">Get FREE Estimate</div>
                         <div class="block__text">
-                            <p>Let us be your personal renovation assistant! We’ll prepare your free initial estimate
+                            <p>Let us be your personal countertop assistant! We’ll prepare your free initial estimate
                                 within a couple of hours.</p>
                         </div>
                     </div>
@@ -1276,7 +1276,7 @@ function myFunction() {
         <div class="container">
             <div class="bottom">
                 <div class="row">
-                    <h3 class="title__side title__side--lined col-md-6">As an award-winning countertop renovation company</h3>
+                    <h3 class="title__side title__side--lined col-md-6">As An Award-Winning Countertop Company</h3>
 
                 </div>
                 <div class="row">
@@ -1315,20 +1315,10 @@ function myFunction() {
                 <li>
                     <div class="row">
                         <div class="content__block col-md-6">
-                            <h2 class="title__side title__side--lined">How Much Does The Countertop Renovation Project
-                                Really Cost?</h2>
+                            <h2 class="title__side title__side--lined">Here’s what to expect when you hire us as your countertop contractor.</h2>
                             <div class="text">
-                                <p>First, you’ll need to consider the labor cost of your Countertop Renovation. Most
-                                    contractors are paid on an hourly rate which varies depending on their level of
-                                    experience and qualifications. You can get a contractor for as low as $45 per hour
-                                    or more if they are significantly experienced. You may choose a contractor who
-                                    offers all-inclusive services. This means that you’ll have access to designers,
-                                    plumbers, electricians, and other contractors under the same roof. This is a better
-                                    approach to take as it makes it easier for you to budget for everything and even
-                                    request a significant discount which saves you money in the long run. You’ll also
-                                    avoid the potential headaches of dealing with different people. Typically, countertop
-                                    renovations cost between $9000 and $40,000. This includes the cost of labor and
-                                    materials needed to renovation the space.</p>
+                                <p>As An Award-Winning Countertop Company, We aim to deliver an all-inclusive countertop service and strive to ensure that
+                                   each countertop project stays on time and within budget.</p>
                             </div>
                         </div>
                         <div class="content__image col-md-6">
